--- a/src/main/resources/com/kursinis/ptkursinis/view/loginView.fxml
+++ b/src/main/resources/com/kursinis/ptkursinis/view/loginView.fxml
@@ -2,13 +2,14 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: linear-gradient(to right bottom, #eb984e, #e67e22);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kursinis.ptkursinis.fxControllers.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="372.0" prefWidth="300.0" style="-fx-background-color: linear-gradient(to right bottom, #eb984e, #e67e22);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kursinis.ptkursinis.fxControllers.LoginController">
     <children>
         <Label focusTraversable="false" layoutX="75.0" layoutY="29.0" prefHeight="18.0" prefWidth="150.0" style="-fx-alignment: center;" text="Login" textFill="#45260a">
             <font>
@@ -25,7 +26,7 @@
                 <Font size="18.0" />
             </font>
         </PasswordField>
-        <Button defaultButton="true" layoutX="66.0" layoutY="284.0" mnemonicParsing="false" onAction="#verifyLogin" prefHeight="40.0" prefWidth="168.0" style="-fx-border-radius: 30px; -fx-background-color: #45260a;" text="Login" textAlignment="CENTER" textFill="#fdf2e9">
+        <Button fx:id="loginButton" defaultButton="true" layoutX="66.0" layoutY="228.0" mnemonicParsing="false" onAction="#verifyLogin" prefHeight="40.0" prefWidth="168.0" style="-fx-border-radius: 30; -fx-background-color: #45260a;" text="Login" textAlignment="CENTER" textFill="#fdf2e9">
             <font>
                 <Font size="18.0" />
             </font>
@@ -33,5 +34,10 @@
                 <Cursor fx:constant="HAND" />
             </cursor>
         </Button>
+      <Hyperlink layoutX="87.0" layoutY="287.0" onAction="#goToRegistration" text="New user? Sign Up" textFill="#45260a">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Hyperlink>
     </children>
 </AnchorPane>
