--- a/src/main/resources/com/kursinis/ptkursinis/view/employeesPage.fxml
+++ b/src/main/resources/com/kursinis/ptkursinis/view/employeesPage.fxml
@@ -1,14 +1,198 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.kursinis.ptkursinis.fxControllers.EmployeesPageController"
-            prefHeight="400.0" prefWidth="600.0">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1100.0" style="-fx-background-color: #FDF2F2;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kursinis.ptkursinis.fxControllers.EmployeesPageController">
+    <top>
 
-</AnchorPane>
+
+        <TableView fx:id="employeeTable" maxWidth="1100.0" minWidth="1000.0" prefHeight="400.0" prefWidth="1050.0">
+            <columns>
+                <TableColumn prefWidth="35.20001220703125" text="ID">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="id" />
+                    </cellValueFactory>
+                </TableColumn>
+
+                <TableColumn prefWidth="91.20001220703125" text="Username">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="username" />
+                    </cellValueFactory>
+                </TableColumn>
+
+                <TableColumn prefWidth="121.5999755859375" text="Password">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="password" />
+                    </cellValueFactory>
+                </TableColumn>
+
+                <TableColumn prefWidth="136.79998779296875" text="Email">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="email" />
+                    </cellValueFactory>
+                </TableColumn>
+
+                <TableColumn minWidth="0.0" prefWidth="127.199951171875" text="First Name">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="firstName" />
+                    </cellValueFactory>
+                </TableColumn>
+
+                <TableColumn prefWidth="107.99993896484375" text="Last Name">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="lastName" />
+                    </cellValueFactory>
+                </TableColumn>
+
+                <TableColumn prefWidth="116.7999267578125" text="Phone Number">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="phoneNumber" />
+                    </cellValueFactory>
+                </TableColumn>
+
+                <TableColumn prefWidth="92.800048828125" text="Employee Id">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="employeeId" />
+                    </cellValueFactory>
+                </TableColumn>
+
+                <TableColumn prefWidth="110.4000244140625" text="Employment Date">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="employmentDate" />
+                    </cellValueFactory>
+                </TableColumn>
+
+                <TableColumn prefWidth="109.5999755859375" text="Is Admin">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="isAdmin" />
+                    </cellValueFactory>
+                </TableColumn>
+
+                      <TableColumn prefWidth="42.4000244140625" text="Type">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="type" />
+                    </cellValueFactory>
+                </TableColumn>
+            </columns>
+        </TableView>
+    </top>
+
+    <bottom>
+        <HBox prefHeight="400.0" prefWidth="1100.0" BorderPane.alignment="CENTER">
+            <children>
+                <VBox fx:id="fieldVBox" prefHeight="400.0" prefWidth="259.0" BorderPane.alignment="CENTER">
+                    <children>
+                        <Label text="Username" textFill="#794848" />
+                        <TextField fx:id="usernameField" style="-fx-background-color: #FFF;" />
+                        <Label text="Password" textFill="#794848" />
+                        <TextField fx:id="passwordField" style="-fx-background-color: #FFF;" />
+                        <Label text="Email" textFill="#794848" />
+                        <TextField fx:id="emailField" style="-fx-background-color: #FFF;" />
+                        <Label text="First Name" textFill="#794848" />
+                        <TextField fx:id="firstnameField" style="-fx-background-color: #FFF;" />
+                        <Label text="Last Name" textFill="#794848" />
+                        <TextField fx:id="lastnameField" style="-fx-background-color: #FFF;" />
+                        <Label text="Phone Number" textFill="#794848" />
+                        <TextField fx:id="numberField" style="-fx-background-color: #FFF;" />
+                        <Label text="Employee Id" textFill="#794848" />
+                        <TextField fx:id="employeeIdField" style="-fx-background-color: #FFF;" />
+                        <Label text="Employment Date" textFill="#794848" />
+                        <DatePicker fx:id="employmentDateDatePicker" style="-fx-background-color: #FFF;" />
+                        <CheckBox fx:id="isAdminCheckBox" mnemonicParsing="false" text="Is Admin">
+                            <VBox.margin>
+                                <Insets top="5.0" />
+                            </VBox.margin>
+                        </CheckBox>
+                    </children>
+                    <padding>
+                        <Insets left="20.0" right="20.0" top="10.0" />
+                    </padding>
+                </VBox>
+            <Separator orientation="VERTICAL" prefHeight="200.0" />
+                <VBox prefHeight="400.0" prefWidth="300.0" spacing="50.0">
+                    <children>
+                        <Button mnemonicParsing="false" onAction="#deselectEmployee" prefWidth="200.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Deselect" textFill="#fdf2f2">
+                            <font>
+                                <Font size="14.0" />
+                            </font>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#addEmployee" prefWidth="200.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Add employee" textFill="#fdf2f2">
+                            <font>
+                                <Font size="14.0" />
+                            </font>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#deleteSelectedEmployee" prefWidth="200.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Delete selected employee" textFill="#fdf2f2">
+                            <font>
+                                <Font size="14.0" />
+                            </font>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#updateSelectedEmployee" prefWidth="200.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Update selected employee" textFill="#fdf2f2">
+                            <font>
+                                <Font size="14.0" />
+                            </font>
+                        </Button>
+                    </children>
+                    <padding>
+                        <Insets left="50.0" right="50.0" top="50.0" />
+                    </padding>
+                </VBox>
+            <Separator orientation="VERTICAL" prefHeight="200.0" />
+                <Pane prefHeight="400.0" prefWidth="238.0" />
+            <Separator orientation="VERTICAL" prefHeight="200.0" />
+                <VBox prefHeight="400.0" prefWidth="300.0">
+                    <children>
+                  <Label text="Select Column" textFill="#794848" />
+                        <ChoiceBox fx:id="columnSelectionBox" prefWidth="200.0" style="-fx-background-color: #FFF;">
+                            <VBox.margin>
+                                <Insets bottom="20.0" />
+                            </VBox.margin>
+                            <cursor>
+                                <Cursor fx:constant="HAND" />
+                            </cursor>
+                        </ChoiceBox>
+                        <TextField fx:id="searchField" promptText="Search..." style="-fx-background-color: #FFF;">
+                            <VBox.margin>
+                                <Insets bottom="50.0" />
+                            </VBox.margin>
+                            <font>
+                                <Font size="14.0" />
+                            </font>
+                        </TextField>
+                        <Button mnemonicParsing="false" onAction="#findEmployee" prefWidth="200.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Find employee" textFill="#fdf2f2">
+                            <font>
+                                <Font size="14.0" />
+                            </font>
+                        </Button>
+                  <Button mnemonicParsing="false" onAction="#resetSearch" prefWidth="200.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Reset" textFill="#fdf2f2">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="68.0" />
+                     </VBox.margin>
+                  </Button>
+                    </children>
+                    <padding>
+                        <Insets left="50.0" right="50.0" top="50.0" />
+                    </padding>
+                </VBox>
+            </children>
+        </HBox>
+    </bottom>
+</BorderPane>
