--- a/src/main/resources/com/kursinis/ptkursinis/view/itemsPage.fxml
+++ b/src/main/resources/com/kursinis/ptkursinis/view/itemsPage.fxml
@@ -1,32 +1,248 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml" fx:controller="com.kursinis.ptkursinis.fxControllers.ItemPageController">
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-    <TableView fx:id="tableView" layoutX="10.0" layoutY="10.0" prefHeight="400.0" prefWidth="600.0">
-        <columns>
-            <!-- ID Column -->
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1100.0" style="-fx-background-color: #FDF2F2;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kursinis.ptkursinis.fxControllers.ItemPageController">
+   <bottom>
+      <HBox prefHeight="380.0" prefWidth="1100.0" BorderPane.alignment="CENTER">
+         <children>
+            <VBox prefHeight="380.0" prefWidth="240.0" spacing="40.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#deselect" prefHeight="30.0" prefWidth="218.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Deselect" textFill="#fdf2f2">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#addProduct" prefHeight="30.0" prefWidth="218.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Add product" textFill="#fdf2f2">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#deleteProduct" prefHeight="30.0" prefWidth="218.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Delete product" textFill="#fdf2f2">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#updateProduct" prefHeight="30.0" prefWidth="218.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Update product" textFill="#fdf2f2">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets bottom="70.0" left="10.0" right="10.0" top="70.0" />
+               </padding>
+            </VBox>
+            <Separator orientation="VERTICAL" prefHeight="200.0" prefWidth="0.0" />
+            <VBox prefHeight="380.0" prefWidth="130.0">
+               <children>
+                  <Label text="Select type of product" textFill="#794848">
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Label>
+                  <ChoiceBox fx:id="productTypeChoiceBox" prefWidth="140.0" />
+                  <Label text="Select warehouse" textFill="#794848">
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="49.0" />
+                     </VBox.margin>
+                  </Label>
+                  <ChoiceBox fx:id="warehouseSelectChoiceBox" prefWidth="150.0" />
+               </children>
+               <HBox.margin>
+                  <Insets left="5.0" right="5.0" />
+               </HBox.margin>
+               <padding>
+                  <Insets bottom="50.0" top="100.0" />
+               </padding>
+            </VBox>
+            <Separator orientation="VERTICAL" prefHeight="200.0" />
+            <HBox prefHeight="380.0" prefWidth="500.0">
+               <children>
+                  <VBox prefHeight="380.0" prefWidth="250.0">
+                     <children>
+                        <Label text="Brand" textFill="#794848" />
+                        <TextField fx:id="brandTextField" />
+                        <Label text="Name" textFill="#794848" />
+                        <TextField fx:id="nameTextField" />
+                        <Label text="Price" textFill="#794848" />
+                        <TextField fx:id="priceTextField" />
+                        <Label text="OS" textFill="#794848" />
+                        <TextField fx:id="osTextField" />
+                        <Label text="Inches" textFill="#794848" />
+                        <TextField fx:id="inchesTextField" />
+                        <Label text="Resolution" textFill="#794848" />
+                        <TextField fx:id="resolutionTextField" />
+                        <Label text="Battery" textFill="#794848" />
+                        <TextField fx:id="batteryTextField" />
+                     </children>
+                     <padding>
+                        <Insets left="20.0" right="20.0" top="30.0" />
+                     </padding>
+                  </VBox>
+                  <VBox prefHeight="380.0" prefWidth="250.0">
+                     <padding>
+                        <Insets left="20.0" right="20.0" top="30.0" />
+                     </padding>
+                     <children>
+                        <Label text="Ram" textFill="#794848" />
+                        <TextField fx:id="ramTextField" />
+                        <Label text="Weight" textFill="#794848" />
+                        <TextField fx:id="weightTextField" />
+                        <Label text="Storage" textFill="#794848" />
+                        <TextField fx:id="storageTextField" />
+                        <Label text="Length" textFill="#794848" />
+                        <TextField fx:id="lengthTextField" />
+                        <Label text="Label" textFill="#794848" />
+                        <TextField />
+                        <Label text="Label" textFill="#794848" />
+                        <TextField />
+                        <Label text="Label" textFill="#794848" />
+                        <TextField />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <Separator orientation="VERTICAL" prefHeight="200.0" />
+            <VBox prefHeight="380.0" prefWidth="200.0">
+               <children>
+                  <Label text="Select column" textFill="#794848">
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                  </Label>
+                  <ChoiceBox fx:id="columnSelectChoiceBox" prefWidth="180.0" />
+                  <TextField fx:id="searchTextField" promptText="Search...">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Button mnemonicParsing="false" onAction="#searchProduct" prefHeight="30.0" prefWidth="179.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Search product" textFill="#fdf2f2">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="40.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#reset" prefHeight="30.0" prefWidth="179.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Reset" textFill="#fdf2f2">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="30.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets left="10.0" right="10.0" top="70.0" />
+               </padding>
+            </VBox>
+         </children></HBox>
+   </bottom>
+   <left>
+      <VBox prefHeight="420.0" prefWidth="241.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Warehouses" textFill="#794848" />
+            <ListView fx:id="warehouseListView" prefHeight="324.0" prefWidth="218.0" />
+            <Button mnemonicParsing="false" onAction="#viewAllProducts" prefHeight="30.0" prefWidth="218.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="View all products" textFill="#fdf2f2">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </Button>
+            <Separator prefWidth="238.0">
+               <VBox.margin>
+                  <Insets top="15.0" />
+               </VBox.margin>
+            </Separator>
+         </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+         <padding>
+            <Insets left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </VBox>
+   </left>
+   <center>
+      <TableView fx:id="productsTableView" prefHeight="420.0" prefWidth="862.0" BorderPane.alignment="CENTER">
+         <columns>
             <TableColumn text="ID">
-                <cellValueFactory><PropertyValueFactory property="id" /></cellValueFactory>
+               <cellValueFactory>
+                  <PropertyValueFactory property="id" />
+               </cellValueFactory>
             </TableColumn>
-
-            <!-- Name Column -->
+            <TableColumn text="Brand">
+               <cellValueFactory>
+                  <PropertyValueFactory property="brand" />
+               </cellValueFactory>
+            </TableColumn>
             <TableColumn text="Name">
-                <cellValueFactory><PropertyValueFactory property="name" /></cellValueFactory>
+               <cellValueFactory>
+                  <PropertyValueFactory property="name" />
+               </cellValueFactory>
             </TableColumn>
-
-            <!-- Quantity Column -->
-            <TableColumn text="Quantity">
-                <cellValueFactory><PropertyValueFactory property="quantity" /></cellValueFactory>
-            </TableColumn>
-
-            <!-- Price Column -->
             <TableColumn text="Price">
-                <cellValueFactory><PropertyValueFactory property="price" /></cellValueFactory>
+               <cellValueFactory>
+                  <PropertyValueFactory property="price" />
+               </cellValueFactory>
             </TableColumn>
-        </columns>
-    </TableView>
-</AnchorPane>
+            <TableColumn fx:id="osColumn" text="OS">
+               <cellValueFactory>
+                  <PropertyValueFactory property="os" />
+               </cellValueFactory>
+            </TableColumn>
+            <TableColumn fx:id="inchesColumn" text="Inches">
+               <cellValueFactory>
+                  <PropertyValueFactory property="inches" />
+               </cellValueFactory>
+            </TableColumn>
+            <TableColumn fx:id="resolutionColumn" text="Resolution">
+               <cellValueFactory>
+                  <PropertyValueFactory property="resolution" />
+               </cellValueFactory>
+            </TableColumn>
+            <TableColumn fx:id="batteryColumn" text="Battery">
+               <cellValueFactory>
+                  <PropertyValueFactory property="battery" />
+               </cellValueFactory>
+            </TableColumn>
+            <TableColumn fx:id="ramColumn" text="Ram">
+               <cellValueFactory>
+                  <PropertyValueFactory property="ram" />
+               </cellValueFactory>
+            </TableColumn>
+            <TableColumn fx:id="weightColumn" text="Weight">
+               <cellValueFactory>
+                  <PropertyValueFactory property="weight" />
+               </cellValueFactory>
+            </TableColumn>
+            <TableColumn fx:id="storageColumn" text="Storage">
+               <cellValueFactory>
+                  <PropertyValueFactory property="storage" />
+               </cellValueFactory>
+            </TableColumn>
+
+         </columns>
+      </TableView>
+   </center>
+</BorderPane>
