--- a/src/main/resources/com/kursinis/ptkursinis/view/storeView.fxml
+++ b/src/main/resources/com/kursinis/ptkursinis/view/storeView.fxml
@@ -1,22 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kursinis.ptkursinis.fxControllers.StoreController">
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1220.0" style="-fx-background-color: #794848;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kursinis.ptkursinis.fxControllers.StoreController">
    <left>
-      <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #aaa;" BorderPane.alignment="CENTER">
+      <VBox fx:id="vbox" prefHeight="200.0" prefWidth="120.0" spacing="20.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#loadPage" prefHeight="47.0" prefWidth="122.0" text="Items" />
-            <Button mnemonicParsing="false" onAction="#loadPage" prefHeight="47.0" prefWidth="122.0" text="Warehouses" />
-            <Button mnemonicParsing="false" onAction="#loadPage" prefHeight="47.0" prefWidth="122.0" text="Employees" />
-            <Button mnemonicParsing="false" onAction="#loadPage" prefHeight="47.0" prefWidth="122.0" text="Customers" />
+            <Button mnemonicParsing="false" onAction="#loadPage" prefHeight="47.0" prefWidth="100.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Items" textFill="#fdf2f2">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
+            <Button mnemonicParsing="false" onAction="#loadPage" prefHeight="47.0" prefWidth="100.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Warehouses" textFill="#fdf2f2">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
+            <Button fx:id="employeesButton" mnemonicParsing="false" onAction="#loadPage" prefHeight="47.0" prefWidth="100.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Employees" textFill="#fdf2f2">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
+            <Button mnemonicParsing="false" onAction="#loadPage" prefHeight="47.0" prefWidth="100.0" style="-fx-background-color: #593636; -fx-cursor: hand;" text="Customers" textFill="#fdf2f2">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
          </children>
+         <padding>
+            <Insets left="10.0" right="10.0" top="20.0" />
+         </padding>
       </VBox>
    </left>
    <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #DDD;" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
