--- a/src/main/resources/com/kursinis/ptkursinis/view/warehousesPage.fxml
+++ b/src/main/resources/com/kursinis/ptkursinis/view/warehousesPage.fxml
@@ -1,11 +1,118 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1100.0" style="-fx-background-color: #FDF2F2;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.kursinis.ptkursinis.fxControllers.WarehousePageController">
+   <left>
+      <TableView fx:id="warehousesTableView" prefHeight="800.0" prefWidth="422.0" BorderPane.alignment="CENTER">
+         <columns>
+            <TableColumn prefWidth="31.20001184940338" text="ID">
+               <cellValueFactory>
+                  <PropertyValueFactory property="id" />
+               </cellValueFactory>
+            </TableColumn>
+            <TableColumn prefWidth="182.4000473022461" text="Name">
+               <cellValueFactory>
+                  <PropertyValueFactory property="name" />
+               </cellValueFactory>
+            </TableColumn>
+            <TableColumn prefWidth="236.7999267578125" text="Address">
+               <cellValueFactory>
+                  <PropertyValueFactory property="address" />
+               </cellValueFactory>
+            </TableColumn>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <Button layoutX="474.0" layoutY="307.0" mnemonicParsing="false" text="Butoonne" />
-   </children>
-</AnchorPane>
+         </columns>
+      </TableView>
+   </left>
+   <right>
+      <HBox prefHeight="800.0" prefWidth="684.0" BorderPane.alignment="CENTER">
+         <children>
+            <VBox prefHeight="800.0" prefWidth="321.0">
+               <children>
+                  <Label text="Name" textFill="#794848" />
+                  <TextField fx:id="nameTextField" style="-fx-background-color: #FFF;" />
+                  <Label text="Address" textFill="#794848">
+                     <VBox.margin>
+                        <Insets top="30.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="addressTextField" style="-fx-background-color: #FFF;" />
+               </children>
+               <padding>
+                  <Insets left="20.0" right="20.0" top="50.0" />
+               </padding>
+            </VBox>
+            <VBox prefHeight="800.0" prefWidth="360.0" spacing="30.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#deselect" prefWidth="320.0" style="-fx-cursor: hand; -fx-background-color: #593636;" text="Deselect" textFill="#fdf2f2">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#addWarehouse" prefWidth="320.0" style="-fx-cursor: hand; -fx-background-color: #593636;" text="Add Warehouse" textFill="#fdf2f2">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#deleteWarehouse" prefWidth="320.0" style="-fx-cursor: hand; -fx-background-color: #593636;" text="Delete Warehouse" textFill="#fdf2f2">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#updateWarehouse" prefWidth="320.0" style="-fx-cursor: hand; -fx-background-color: #593636;" text="Update Warehouse" textFill="#fdf2f2">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Label text="Select column" textFill="#794848">
+                     <VBox.margin>
+                        <Insets top="250.0" />
+                     </VBox.margin>
+                  </Label>
+                  <ChoiceBox fx:id="selectionChoiceBox" prefWidth="320.0" style="-fx-cursor: hand;">
+                     <VBox.margin>
+                        <Insets top="-30.0" />
+                     </VBox.margin>
+                  </ChoiceBox>
+                  <TextField fx:id="searchTextField" promptText="Search...">
+                     <VBox.margin>
+                        <Insets top="-20.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Button mnemonicParsing="false" onAction="#searchWarehouse" prefWidth="320.0" style="-fx-cursor: hand; -fx-background-color: #593636;" text="Search Warehouse" textFill="#fdf2f2">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#resetSearch" prefWidth="320.0" style="-fx-cursor: hand; -fx-background-color: #593636;" text="Reset" textFill="#fdf2f2">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+               <padding>
+                  <Insets left="20.0" right="20.0" top="57.0" />
+               </padding>
+            </VBox>
+         </children>
+      </HBox>
+   </right>
+</BorderPane>
